2013-08-29  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * JastAddJ now generates classfiles for imported types that are imported
    from source

2013-08-12  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Removed BranchPropagation interface
    * Refactored branch target analysis
    * Removed some `instanceof` use

2013-08-11  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Changed the branchTarget method into an inherited attribute and improved
    its performance. Rather than collecting all branches for each potential
    target statement and testing if any of those is the current branch it
    simply tests the branch statement against each possible target statement
    directly.

2013-08-10  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * The collectFinally method has been replaced by the
    inherited enclosingFinally attribute. All enclosing finally
    hosts can be found by repeatedly evaluating the new attribute.
    This allows lazier evaluation and fixes some problems with the
    old imperative method.

2013-06-04  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Renamed PlaceholderMethodDecl to StandInMethodDecl

2013-06-03  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed annotation bytecode bug affecting Class-valued annotation
    attributes

2013-05-31  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed error that caused single static imports to work like
    on-demand static imports

2013-05-30  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed generic method type inference error
    * Reduced code duplication in Java 7 module by separating some
    aspects into separate files in the Java 4 module

2013-05-25  Jesper Öqvist <jesper@llbit.se>

    * Java support level is now included in the version string given by
    -version

2013-05-22  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Added -profile option to generate profile data

2013-05-19  Jesper Öqvist <jesper@llbit.se>

    * Renamed SuperClassAccess children to SuperClass