@@ -5,7 +5,8 @@
 			<attribute name="ignore_optional_problems" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/java"/>
+	<classpathentry kind="src" path="src/backend"/>
+	<classpathentry kind="src" path="src/frontend"/>
 	<classpathentry kind="lib" path="tools/beaver-ant.jar"/>
 	<classpathentry kind="lib" path="tools/beaver-rt.jar"/>
 	<classpathentry kind="lib" path="tools/jastadd2.jar"/>
