@@ -10,8 +10,8 @@ java7.dir=${jj.root}/java7
 ast.package=AST
 ast.dir=AST
 tools.dir=${jj.root}/tools
-src.dir=${jj.root}/src/java
+src.dir=${jj.root}/src
 bin.dir=${jj.root}/ant-bin
-gen.dir=${jj.root}/src/gen
-tmp.dir=${jj.root}/src/tmp
-res.dir=${jj.root}/src/res
+gen.dir=${src.dir}/gen
+tmp.dir=${src.dir}/tmp
+res.dir=${src.dir}/res
