@@ -132,12 +132,12 @@ Build a standard release:
 	<target name="build" description="compile JastAddJ">
 		<mkdir dir="${bin.dir}"/>
 		<javac
-			srcdir="${src.dir}"
 			destdir="${bin.dir}"
 			debug="${debug}"
 			nowarn="true"
 			includeantruntime="true">
-			<src path="${src.dir}"/>
+			<src path="${src.dir}/frontend"/>
+			<src path="${src.dir}/backend"/>
 			<src path="${gen.dir}"/>
 		</javac>
 	</target>
@@ -156,8 +156,7 @@ Build a standard release:
 		</jar>
 	</target>
 
-	<target name="bootstrap"
-		description="bootstrap jastaddj.jar">
+	<target name="bootstrap" description="bootstrap jastaddj.jar">
 		<delete dir="${bin.dir}"/>
 		<mkdir dir="${bin.dir}"/>
 		<copy todir="${bin.dir}" preservelastmodified="true">
@@ -166,8 +165,8 @@ Build a standard release:
 			</fileset>
 		</copy>
 		<fileset id="src.fileset" dir="${src.dir}">
-			<include name="**/*.java"/>
-			<exclude name="org/jastadd/jastaddj/*Task.java"/>
+			<include name="frontend/**/*.java"/>
+			<include name="backend/**/*.java"/>
 		</fileset>
 		<fileset id="gen.fileset" dir="${gen.dir}">
 			<include name="**/*.java"/>
@@ -181,6 +180,7 @@ Build a standard release:
 		<java classname="org.jastadd.jastaddj.JavaCompiler">
 			<classpath>
 				<pathelement path="${bootstrap.jar}"/>
+				<pathelement path="${jj.root}/lib/ant-1.9.1.jar"/>
 			</classpath>
 			<arg value="-d"/>
 			<arg value="${bin.dir}"/>
