@@ -21,16 +21,12 @@
 	<target name="frontend" depends="frontend-gen" description="compile JastAddJ">
 		<mkdir dir="${bin.dir}"/>
 		<javac
-			srcdir="${src.dir}"
 			destdir="${bin.dir}"
 			debug="${debug}"
 			nowarn="true"
 			includeantruntime="true">
-			<src path="${src.dir}"/>
+			<src path="${src.dir}/frontend"/>
 			<src path="${gen.dir}"/>
-			<exclude name="JavaCompiler.java"/>
-			<exclude name="org/jastadd/jastaddj/JastAddJTask.java"/>
-			<exclude name="org/jastadd/jastaddj/JavaCompiler.java"/>
 		</javac>
 		<antcall target="copy-resources"/>
 	</target>
@@ -93,12 +89,12 @@
 	<target name="backend" depends="backend-gen" description="compile JastAddJ">
 		<mkdir dir="${bin.dir}"/>
 		<javac
-			srcdir="${src.dir}"
 			destdir="${bin.dir}"
 			debug="${debug}"
 			nowarn="true"
 			includeantruntime="true">
-			<src path="${src.dir}"/>
+			<src path="${src.dir}/frontend"/>
+			<src path="${src.dir}/backend"/>
 			<src path="${gen.dir}"/>
 		</javac>
 		<antcall target="copy-resources"/>
