@@ -2,6 +2,7 @@
 
     * JastAddJ now generates classfiles for imported types that are imported
     from source
+    * Split src/java directory into src/frontend and src/backend
 
 2013-08-12  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
